[tool.poetry]
name = "travel-backend"
version = "0.1.0"
description = ""
authors = ["Tiffany Subin Kim <sbtiffanykim@gmail.com>"]
readme = "README.md"
packages = [{include = "travel_backend"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
