[tool.poetry]
name = "travel-backend"
version = "0.1.0"
description = ""
authors = ["Tiffany Subin Kim <sbtiffanykim@gmail.com>"]
readme = "README.md"
packages = [{include = "travel_backend"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
pillow = "^10.3.0"
djangorestframework = "^3.15.1"
pyjwt = "^2.8.0"
django-environ = "^0.11.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
